--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
     <title>palindrome checker</title>
   </head>
   <body>
@@ -30,7 +30,7 @@
 </div>
 </div>
 
-<script src='./index.js'></script>
+<script src='./script.js'></script>
 
     </body>
 
